<resources>
    <string name="app_name">好心情医生版</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 页面名称 -->
    <string name="main_navigation_home">首页</string>
    <string name="main_navigation_patient">我的患者</string>
    <string name="main_navigation_task">我的任务</string>
    <string name="main_navigation_user">个人中心</string>

    <string name="press_back">再按一次退出程序</string>
    <string name="cancel">取消</string>
    <string name="pwSubmit">确定</string>

    <string name="take_picture">拍照</string>
    <string name="select_local_picture">选择本地图片</string>

    <!-- -->
    <string name="progress_loading">加载中，请稍候</string>
    <string name="progress_load_error">加载失败，点击屏幕刷新</string>
    <string name="progress_load_no_data">暂无数据</string>

    <!-- guide-vp -->
    <integer-array name="guide_vp">
        <item>@mipmap/newer1</item>
        <item>@mipmap/newer2</item>
        <item>@mipmap/newer3</item>
        <item>@mipmap/newer4</item>
    </integer-array>

    <!--公用文字-->
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="phone">手机号</string>
    <string name="password">密码</string>
    <string name="code">验证码</string>
    <string name="phone_code">获取验证码</string>
    <string name="next">下一步</string>
    <string name="later">以后再说</string>
    <string name="upload_photo">上传照片</string>
    <string name="uploading">正在上传...</string>

    <!--登陆页面-->
    <string name="login_forget">忘记密码?</string>
    <string name="login_toregister">没有帐号?立即注册</string>

    <!--register-->
    <string name="register_password">登录密码</string>
    <string name="register_login">已有账号,登录</string>
    <string name="register_agree">我已阅读并同意</string>
    <string name="visit_code">请输入邀请码,没有可以不填</string>
    <string name="register_order">《好心情用户服务协议》</string>

    <!--forgetpassword-->
    <string name="forget_pw_text">忘记密码</string>

    <!--good特长-->
    <string name="good_choice">选择特长</string>

    <!--完善注册信息-->
    <string name="evip_name">您的姓名</string>
    <string name="evip_email">邮箱</string>
    <string name="evip_man">男士</string>
    <string name="evip_wemon">女士</string>
    <string name="evip_remark">请务必上传正确真实的照片。职业证书、职称证书、胸牌、工作证等均可作为医生审核凭证。如未上传，我们将无法为您审核。</string>
    <string name="evip_limit">最多可上传5张</string>
    <string name="evip_other">完善其它信息</string>
    <string name="evip_city">选择省市县/地区</string>
    <string name="evip_hospital">选择执业医院</string>
    <string name="evip_office">选择科室</string>
    <string name="evip_phone">科室电话</string>
    <string name="evip_other_hospital">其它医院</string>
    <string name="evip_ranks">职称</string>
    <string name="evip_brief">个人简介</string>

    <!--随访-->
    <string name="follow_apply">随访患者申请</string>
    <string name="follow_manager">随访方案管理</string>
    <string name="follow_user">随访患者</string>
    <string name="follow_notice">群发通知</string>
    <string name="follow_article">患教库</string>

    <!--患者信息-->
    <string name="user_phone">手机号</string>
    <string name="user_nick">昵称</string>
    <string name="user_name">姓名</string>
    <string name="user_sex">性别</string>
    <string name="user_birthday">出生日期</string>
    <string name="user_card">身份证号</string>
    <string name="user_email">邮箱</string>
    <string name="user_marriage">婚姻状况</string>
    <string name="user_vocation">职业</string>
    <string name="user_address">地址</string>
    <string name="user_time">病程</string>
    <string name="user_first_see_doctor_time">首次就诊时间</string>
    <string name="user_relapse">是否复发</string>
    <string name="user_relapse_times">复发次数</string>
    <string name="user_height">身高(m)</string>
    <string name="user_weight">体重(kg)</string>
    <string name="user_use_condition">近3月使用药物</string>
    <string name="user_description">病情描述</string>

    <!-- 患者分组管理 -->
    <string name="add_patient_group">添加分组</string>
    <string name="patient_group_manage">患者分组管理</string>
    <string name="save">保存</string>
    <string name="delete_patient">删除患者</string>
    <string name="communicate_with_patient">和患者沟通</string>
    <string name="add_case_report">添加病历</string>
    <string name="select_new_follow_up_for_patient">为患者选择新的随访方案</string>
    <string name="select_group">选择分组</string>
    <string name="men_zhen_bing_li">门诊病历</string>
    <string name="zhu_yuan_bing_li">住院病历</string>
    <string name="sui_fang_biao_dan">随访表单</string>
    <string name="unread">未读</string>
    <string name="user_disease_process">病程</string>
    <string name="patient_info">患者信息</string>
    <string name="pending_follow_up">待处理随访任务</string>
    <string name="member_num_format">[%d]</string>

    <!--添加患者-->
    <string name="patient_add_title">添加患者</string>
    <string name="treatment_type">就诊类型</string>
    <string name="be_in_hospital_time">住院时间</string>
    <string name="out_hospital_time">出院时间</string>
    <string name="doctor">医&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;生</string>
    <string name="treatment_hospital">就诊医院</string>
    <string name="patient_details">患者详情</string>
    <string name="case_history">病历记录</string>
    <string name="treatment_time">就诊时间</string>
    <string name="patient">患者</string>
    <string name="treatment_info">就诊信息</string>
    <string name="outpatient">门诊</string>
    <string name="inpatient">住院</string>
    <string name="add_case_report_title">创建病历</string>
    <string name="upload_photo_in_add_case">上传照片（最多上传5张照片）</string>
    <string name="save_case_report">保存</string>
    <string name="sdcard_not_exist">sd卡异常</string>
    <string name="select_pic_source">选择图片来源</string>
    <string name="camera">相机</string>
    <string name="photo_album">相册</string>
    <string name="follow_up_form_title">%s的随访表单</string>
    <string name="illness_change">病情变化</string>
    <string name="weight_record">体重记录</string>
    <string name="other_check_and_result">其他检查及结果</string>
    <string name="eat_med_record">服药记录</string>
    <string name="form_self_measure">自评量表</string>
    <string name="form_doctor_measure">医评量表</string>
    <string name="check_name">检查名称</string>
    <string name="check_result">结&#160;&#160;&#160;&#160;&#160;&#160;果</string>
    <string name="medicine_name">药品名称</string>
    <string name="eat_med_time">用药时间</string>
    <string name="single_amount">单量</string>
    <string name="rate">频率</string>
    <string name="eat_method">用法</string>
    <string name="sleep_change">睡眠情况</string>
    <string name="food_change">进食情况</string>
    <string name="other_change">其他情况</string>
    <string name="xx_description">%s描述</string>
    <string name="status_invalid">无效</string>
    <string name="status_better">好转</string>
    <string name="status_best">痊愈</string>
    <string name="medicine_bad_reaction">药物不良反应</string>
    <string name="occurrence_time">发生时间</string>
    <string name="duration_time">持续时间</string>
    <string name="symptoms_des">症状描述</string>
    <string name="impact">影&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;响</string>
    <string name="important_doctor_advice">重要医嘱</string>
    <string name="keep_up_advice">维持原治疗方案</string>
    <string name="modify_advice">修改随访方案</string>
    <string name="see_illness_change_record">查看病情变化记录</string>
    <string name="illness_change_status_in_record_list">病情变化：%s</string>
    <string name="illness_change_question">问题：%s</string>
    <string name="rename_group">请输入修改后的分组名称</string>
    <string name="prompt">提示</string>
    <string name="confirm_delete_this_patient">您是否要删除患者：%s？患者将不再收到您的随访相关消息。</string>
    <string name="confirm">确认</string>
    <string name="age_xx">年龄：%s岁</string>
    <string name="score_xx">分数：%s</string>
    <string name="result_xx">测试结果：%s</string>
    <string name="result_description_xx">结果说明：%s</string>
    <string name="qualification_info">认证说明:\n 1.请确保照片及文字信息清晰可见；\n 2.职业医生资格证图片，请确保标红部分的信息总能完全展示</string>
    <string name="qualificating_info">您的资料已提交成功！\n审核时间为1-3个工作日，审核结果将以短信形式通知您，如有疑问，请联系客服电话：010-52451076</string>

</resources>
