<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/top_title"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_add_patient_group_et"
            android:orientation="vertical"
            android:stretchColumns="1">

            <TableRow>

                <TextView
                    style="@style/patient_info_left"
                    android:text="@string/user_phone" />

                <TextView
                    android:id="@+id/tvPhoneNumber"
                    android:text="@string/user_phone"
                    style="@style/patient_info_right" />
            </TableRow>

            <View style="@style/divider_line" />

            <TableRow>

                <TextView
                    style="@style/patient_info_left"
                    android:text="@string/user_nick" />

                <TextView
                    android:id="@+id/tvNick"
                    style="@style/patient_info_right" />
            </TableRow>

            <View style="@style/divider_line" />

            <TableRow>

                <TextView
                    style="@style/patient_info_left"
                    android:text="@string/user_name" />

                <TextView
                    android:id="@+id/tvName"
                    style="@style/patient_info_right" />
            </TableRow>

            <View style="@style/divider_line" />

            <TableRow>

                <TextView
                    style="@style/patient_info_left"

                    android:text="@string/user_sex" />

                <TextView
                    android:id="@+id/tvSex"
                    style="@style/patient_info_right" />
            </TableRow>

            <View style="@style/divider_line" />

            <TableRow>

                <TextView
                    style="@style/patient_info_left"
                    android:text="@string/user_birthday" />

                <TextView
                    android:id="@+id/tvBirthday"
                    style="@style/patient_info_right" />
            </TableRow>

            <View style="@style/divider_line" />

            <TableRow>

                <TextView
                    style="@style/patient_info_left"
                    android:text="@string/user_card" />

                <TextView
                    android:id="@+id/tvCard"
                    style="@style/patient_info_right" />
            </TableRow>

            <View style="@style/divider_line" />

            <TableRow>

                <TextView
                    style="@style/patient_info_left"
                    android:text="@string/user_email" />

                <TextView
                    android:id="@+id/tvEmail"
                    style="@style/patient_info_right" />
            </TableRow>

            <View style="@style/divider_line" />

            <TableRow>

                <TextView
                    style="@style/patient_info_left"
                    android:text="@string/user_marriage" />

                <TextView
                    android:id="@+id/tvMarriage"
                    style="@style/patient_info_right" />
            </TableRow>

            <View style="@style/divider_line" />

            <TableRow>

                <TextView
                    style="@style/patient_info_left"
                    android:text="@string/user_vocation" />

                <TextView
                    android:id="@+id/tvVocation"
                    style="@style/patient_info_right" />
            </TableRow>

            <View style="@style/divider_line" />

            <TableRow>

                <TextView
                    style="@style/patient_info_left"
                    android:text="@string/user_address" />

                <TextView
                    android:id="@+id/tvAddress"
                    style="@style/patient_info_right" />
            </TableRow>

            <View style="@style/divider_line" />

            <TableRow>

                <TextView
                    style="@style/patient_info_left"
                    android:text="@string/user_disease_process" />

                <TextView
                    android:id="@+id/tvDiseaseProcess"
                    style="@style/patient_info_right" />
            </TableRow>

            <View style="@style/divider_line" />

            <TableRow>

                <TextView
                    style="@style/patient_info_left"
                    android:text="@string/user_first_see_doctor_time" />

                <TextView
                    android:id="@+id/tvFirstSeeDoctorTime"
                    style="@style/patient_info_right" />
            </TableRow>

            <View style="@style/divider_line" />

            <TableRow>

                <TextView
                    style="@style/patient_info_left"
                    android:text="@string/user_relapse" />

                <TextView
                    android:id="@+id/tvRelapse"
                    style="@style/patient_info_right" />
            </TableRow>

            <View style="@style/divider_line" />

            <TableRow>

                <TextView
                    style="@style/patient_info_left"
                    android:text="@string/user_relapse_times" />

                <TextView
                    android:id="@+id/tvRelapseTimes"
                    style="@style/patient_info_right" />
            </TableRow>

            <View style="@style/divider_line" />

            <TableRow>

                <TextView
                    style="@style/patient_info_left"
                    android:text="@string/user_height" />

                <TextView
                    android:id="@+id/tvHeight"
                    style="@style/patient_info_right" />
            </TableRow>

            <View style="@style/divider_line" />

            <TableRow>

                <TextView
                    style="@style/patient_info_left"
                    android:text="@string/user_weight" />

                <TextView
                    android:id="@+id/tvWeight"
                    style="@style/patient_info_right"/>
            </TableRow>

            <View style="@style/divider_line" />

            <TableRow>

                <TextView
                    style="@style/patient_info_left"
                    android:text="@string/user_use_condition" />

                <TextView
                    android:id="@+id/tvUseCondition"
                    style="@style/patient_info_right" />
            </TableRow>

            <View style="@style/divider_line" />

            <TableRow>

                <TextView
                    style="@style/patient_info_left"
                    android:text="@string/user_description" />

                <TextView
                    android:id="@+id/tvDescription"
                    style="@style/patient_info_right" />
            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>
