<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/top_title"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        android:fitsSystemWindows="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/space_30"
        android:paddingRight="@dimen/space_30">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dip"
            android:src="@mipmap/ic_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/forget_pw_text"
            android:textColor="@color/login_text_color"
            android:textSize="@dimen/text_size_22" />

        <EditText
            android:id="@+id/mobile_edit"
            style="@style/edit_blue"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="@dimen/space_26"
            android:hint="@string/phone"
            android:inputType="number"
            android:maxLength="11"
            android:paddingLeft="@dimen/space_15" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="@dimen/space_20"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/captcha_edit"
                style="@style/edit_blue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:hint="@string/code"
                android:paddingLeft="@dimen/space_15" />


            <Button
                android:id="@+id/btn_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="7dp"
                android:layout_weight="4"
                android:background="@drawable/btn_bg_selecter"
                android:text="@string/phone_code"
                android:textColor="@color/text_color_white"
                android:textSize="@dimen/text_size_18" />
        </LinearLayout>

        <EditText
            android:id="@+id/password_edit"
            style="@style/edit_blue"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="@dimen/space_20"
            android:hint="@string/register_password"
            android:password="true"
            android:digits="0123456789abcdefghigklmnopqrstuvwxyz"
            android:paddingLeft="@dimen/space_15" />

        <Button
            android:id="@+id/next_btn"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_marginTop="@dimen/space_25"
            android:background="@drawable/btn_bg_selecter"
            android:text="@string/next"
            android:textColor="@color/text_color_white"
            android:textSize="@dimen/text_size_18" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_8">

            <TextView
                android:id="@+id/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="@dimen/space_8"
                android:text="@string/login"
                android:textColor="@color/text_color_blue"
                android:textSize="@dimen/text_size_15" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
